# lithdict

./: Cargo.toml
src/: main.rs
