[package]
name = "lithdict"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
html2text = "0.6.0"
reqwest = { version = "0.11.20", features = ["json"] }
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
